@@ -1,6 +1,6 @@
 from os import path
 
-__version__ = '0.1alpha'
+__version__ = '0.1.0'
 
 package_dir = path.abspath(path.dirname(__file__))
 
