@@ -120,7 +120,7 @@ class AutogenerateDiffTest(TestCase):
     drop_table(u'extra')
     drop_column('user', u'pw')
     alter_column('user', 'name', nullable=False)
-    alter_column('order', u'amount', type=sa.Numeric(precision=10, scale=2), old_type=sa.NUMERIC(precision=8, scale=2))
+    alter_column('order', u'amount', type_=sa.Numeric(precision=10, scale=2), old_type=sa.NUMERIC(precision=8, scale=2))
     alter_column('order', u'amount', nullable=True)
     add_column('address', sa.Column('street', sa.String(length=50), nullable=True))
     ### end Alembic commands ###""")
@@ -133,7 +133,7 @@ class AutogenerateDiffTest(TestCase):
     )
     add_column('user', sa.Column(u'pw', sa.VARCHAR(length=50), nullable=True))
     alter_column('user', 'name', nullable=True)
-    alter_column('order', u'amount', type=sa.NUMERIC(precision=8, scale=2), old_type=sa.Numeric(precision=10, scale=2))
+    alter_column('order', u'amount', type_=sa.NUMERIC(precision=8, scale=2), old_type=sa.Numeric(precision=10, scale=2))
     alter_column('order', u'amount', nullable=False)
     drop_column('address', 'street')
     ### end Alembic commands ###""")
@@ -193,7 +193,7 @@ class AutogenRenderTest(TestCase):
             autogenerate._modify_type(
                         "sometable", "somecolumn", CHAR(10), CHAR(20)),
             "alter_column('sometable', 'somecolumn', "
-                "type=sa.CHAR(length=10), old_type=sa.CHAR(length=20))"
+                "type_=sa.CHAR(length=10), old_type=sa.CHAR(length=20))"
         )
 
     def test_render_modify_nullable(self):
